# desktoprobo

./: .env.example  .gitignore  README.md
sounds/: RESPEAKER_SETUP.md  mvp_sound.py  respeaker_test.py  setup_respeaker.sh
src/desktorobo/llm_robot_control/: README.md  package.xml  setup.cfg  setup.py
src/desktorobo/llm_robot_control/launch/: llm_control_launch.py  llm_voice_launch.py
src/desktorobo/llm_robot_control/llm_robot_control/: llm_controller_node.py  voice_controller_node.py
src/desktorobo/llm_robot_control/llm_robot_control/web/: index.html
src/desktorobo/mobile_robot_control/: setup.py
src/desktorobo/mobile_robot_control/mobile_robot_control/: odrive_command.py  sound_player_node.py
